@@ -1678,17 +1678,6 @@ consult the installation file that came with this distribution, or visit \n\
 			&& !fastcgi
 #endif
 		) {
-			if (cgi_sapi_module.php_ini_path_override && cgi_sapi_module.php_ini_ignore) {
-				no_headers = 1;
-				php_output_startup();
-				php_output_activate(TSRMLS_C);
-				SG(headers_sent) = 1;
-				php_printf("You cannot use both -n and -c switch. Use -h for help.\n");
-				php_end_ob_buffers(1 TSRMLS_CC);
-				exit_status = 1;
-				goto out;
-			}
-
 			while ((c = php_getopt(argc, argv, OPTIONS, &php_optarg, &php_optind, 0)) != -1) {
 				switch (c) {
 
