@@ -729,12 +729,6 @@ int main(int argc, char *argv[])
 		CG(in_compilation) = 0; /* not initialized but needed for several options */
 		EG(uninitialized_zval_ptr) = NULL;
 
-		if (cli_sapi_module.php_ini_path_override && cli_sapi_module.php_ini_ignore) {
-			PUTS("You cannot use both -n and -c switch. Use -h for help.\n");
-			exit_status=1;
-			goto out_err;
-		}
-
 		while ((c = php_getopt(argc, argv, OPTIONS, &php_optarg, &php_optind, 0)) != -1) {
 			switch (c) {
 
